--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "typeface-roboto-mono": "0.0.75",
     "vinyl-buffer": "~1.0",
     "vinyl-fs": "~3.0"
+  },
+  "dependencies": {
+    "lato-font": "^3.0.0"
   }
 }
